(testing: write 7 test cases using jest)

--- a/package.json
+++ b/package.json
@@ -1,10 +1,19 @@
 {
   "devDependencies": {
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.0",
     "typescript": "^5.5.3"
   },
   "scripts": {
-    "build" : "tsc",
-    "buildAndExecute" :"tsc && node ./build/index.js",
-    "execute" :"node ./build/index.js"
+    "build": "tsc",
+    "buildAndExecute": "tsc && node ./build/index.js",
+    "execute": "node ./build/index.js",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node"
   }
+  
 }
